umol-io/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@indigo_ind-286-mono_another_v2000.mol.snap
---
source: umol-io/tests/mol_parsing/mod.rs
expression: results
---
expected_category: extended_molecule
category: extended_molecule
molecule:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 10, col 31"
molecule_lenient:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 10, col 31"
extended_molecule:
  success: true
  extended_summary:
    sum_formula: C13*6
    atom_count: 19
    bond_count: 18
    extended_atoms: 6
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 5
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C13*6
    atom_count: 19
    bond_count: 18
    extended_atoms: 6
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 5
